# MyGames101

./: README.md
Project/: CMakeLists.txt
Project/Code/: hw0.cpp  test.cpp
Project/hw1/GAMES101_Homework1_S2021/__MACOSX/: ._Homework1
Project/hw1/GAMES101_Homework1_S2021/__MACOSX/Homework1/Assignment1/: ._Triangle.hpp
